# featurize

./: .build.yml  .envrc  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-please-config.json  renovate.json  rust-toolchain.toml
.builds/: deploy.yml  release.yml
.github/: .kodiak.toml  deploy.yml
.github/workflows/: deploy.yml  pr.yml  release-please.yml
auth/: CHANGELOG.md  Cargo.toml  tailwind.config.js
auth/public/: output.css
auth/src/: consent.rs  csrf.rs  error.rs  index.rs  kratos_client.rs  login.rs  main.rs  ory_client.rs  recovery.rs  registration.rs  renderer.rs  settings.rs  verification.rs
auth/src/kratos_client/: login.rs  recovery.rs  registration.rs  settings.rs  verification.rs
auth/src/ory_client/: common.rs  login.rs  recovery.rs  registration.rs  settings.rs  verification.rs
auth/templates/: base.html  consent.html  error.html  header.html  home.html  index.html  info.html  input.html  live_reload.js  login.html  profile.html  recovery.html  register.html  settings.html  verification.html
ci/: setup-docker.sh
deployments/auth/: fly.toml
deployments/hydra/: config.yaml  fly.toml
deployments/kratos/: config.yaml  fly.toml  identity.schema.json
featurize/: CHANGELOG.md  Cargo.toml
featurize/src/: ory_client.rs
featurize/templates/: base.html  index.html
nix/_automation/: configs.nix  devshells.nix
nix/auth/: apps.nix  args.nix  checks.nix  configs.nix  containers.nix  devshellProfiles.nix  packages.nix
nix/featurize/: apps.nix  args.nix  checks.nix  configs.nix  containers.nix  devshellProfiles.nix  packages.nix
nix/mailslurper/: devshellProfiles.nix  packages.nix
nix/ory/: configs.nix  devshellProfiles.nix  packages.nix
nix/rust/: toolchain.nix
src/: index.rs  main.rs
templates/: profile.html
