[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls"] }
color-eyre = "0.6.3"
futures = "0.3.30"
reqwest = { version = "0.12.0", default-features=false, features = ["http2", "rustls-tls", "cookies", "json", "charset"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
