[package]
name = "auth"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls"] }
color-eyre = "0.6.3"
futures = "0.3.30"
reqwest = { version = "0.12.3", default-features=false, features = ["http2", "rustls-tls", "cookies", "json", "charset"] }
sentry = { version = "0.32.2", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
sentry-actix = "0.32.2"
sentry-tracing = "0.32.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = "0.3.18"
