[package]
name = "auth"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls"] }
base64 = "0.22.0"
color-eyre = "0.6.3"
futures = "0.3.30"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features=false, features = ["http2", "rustls-tls", "cookies", "json", "charset"] }
sentry = { version = "0.32.3", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
sentry-actix = "0.32.3"
sentry-tracing = "0.32.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tera = "1.19.1"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = "0.3.18"
