[package]
name = "featurize"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls"] }
color-eyre = "0.6.3"
futures = "0.3.30"
reqwest = { version = "0.12.4", default-features=false, features = ["http2", "rustls-tls", "cookies", "json", "charset"] }
sentry = { version = "0.33.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
sentry-actix = "0.33.0"
sentry-tracing = "0.33.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = "0.3.18"
